--- a/typescript/simple-mercari-web/dockerfile
+++ b/typescript/simple-mercari-web/dockerfile
@@ -1,7 +1,24 @@
-FROM node:20-alpine
+#build2024/web:latest
+# ベースとなるイメージを指定
+FROM node:latest
+
+# アプリケーションのディレクトリを作成
 WORKDIR /app
 
-RUN addgroup -S mercari && adduser -S trainee -G mercari
-USER trainee
+# ローカルのpackage.jsonとpackage-lock.jsonをコピー
+COPY package*.json ./
 
-CMD ["node", "-v"]
+# npmパッケージをインストール
+RUN npm install
+
+# ローカルのソースコードをコピー
+COPY . .
+
+# TypeScriptをビルド
+RUN npm run build
+
+# ポート3000を公開
+EXPOSE 3000
+
+# アプリケーションを起動
+CMD ["npm", "start"]
