--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,5 +34,8 @@ jobs:
       - name: Pull Docker Image
         run: docker pull $DOCKER_TAG
 
-      - name: Run Docker Image and Execute python/test.py
-        run: docker run $DOCKER_TAG python/test.py
+      - name: Run Docker Image 
+        run: docker run $DOCKER_TAG 
+
+      - name: Run test.py
+        run: python3 python/test.py
