--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         run: docker pull $DOCKER_TAG
 
       - name: Run Docker Image 
-        run: docker run $DOCKER_TAG 
+        run: docker run -d -p 9000:9000 $DOCKER_TAG 
 
       - name: Run test.py
         run: python3 python/test.py
