--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - REACT_APP_API_URL=http://api:9000
+      - REACT_APP_API_URL=http://localhost:9000
     depends_on:
       - api
     networks:
@@ -21,7 +21,7 @@ services:
     ports:
       - "9000:9000"
     environment:
-      - FRONT_URL=http://frontend:3000
+      - FRONT_URL=http://localhost:3000
     networks:
       - mercari-network
 
